# dice-checker

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  development.md  pyproject.toml
.cursor/rules/: general.mdc  python.mdc
.github/workflows/: ci.yml  publish.yml
src/dice_checker/: __init__.py  dice.py  roll.py
src/dicer/: __init__.py
tests/: test_dice.py  test_roll.py
